# extralinks

./: .bumpversion.toml  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: build-pipeline.yml  publish_action.yml
web/js/: ExtraLinks.js  _bkup_rounded_corner_straight_link.js  extralinks_register.js
