[project]
name = "extralinks"
version = "1.0.0"
description = "More connection links."
authors = [
  {name = "Edoardo Carmignani", email = "edoardo.carmignani@gmail.com"}
]
readme = "README.md"
license = {text = "MIT license"}
classifiers = []
dependencies = [

]

[project.urls]
bugs = "https://github.com/edoardocarmignani/extralinks/issues"
homepage = "https://github.com/edoardocarmignani/extralinks"
Repository = "https://github.com/edoardocarmignani/extralinks"


[tool.comfy]
PublisherId = "edoardocarmignani"
DisplayName = "ComfyUI-ExtraLinks"
Icon = ""